tests/ui/fail/invalid_not_in_operator.stderr
error: Expected `IN` after `NOT`, found `NULL`

         = help: Supported operators are: =, !=, >, <, >=, <=, LIKE, ILIKE, IN, NOT IN

 --> tests/ui/fail/invalid_not_in_operator.rs:6:17
  |
6 |         age NOT NULL AND i32  // Invalid operator
  |                 ^^^^
